--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -10,3 +10,5 @@
 = link_to 'Edit', edit_user_path(@user)
 \|
 = link_to 'Back', users_path
+\|
+= link_to 'Add Activity', new_user_activity_path(@user)
