--- a/app/views/entries/_form.html.haml
+++ b/app/views/entries/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @entry do |f|
+= form_for [@user, @activity, @entry] do |f|
   -if @entry.errors.any?
     #error_explanation
       %h2= "#{pluralize(@entry.errors.count, "error")} prohibited this entry from being saved:"
