fleshing it out more

--- a/app/views/activities/_form.html.haml
+++ b/app/views/activities/_form.html.haml
@@ -10,7 +10,7 @@
     = f.label :description
     = f.text_field :description
   .field
-    = f.label :priority
+    = f.label "Default score:"
     = f.number_field :priority
   .actions
     = f.submit 'Save'
