--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -7,10 +7,13 @@
   %b Email:
   = @user.email
 
-%ul
-  - @activities.each do |activity|
-    %li
-      = link_to "Log entry for #{activity.description}", new_user_activity_entry_path(@user, activity)
+%p
+  Log activity entry for:
+  
+  %ul
+    - @activities.each do |activity|
+      %li
+        = link_to "#{activity.description}", new_user_activity_entry_path(@user, activity)
 
 = link_to 'Edit', edit_user_path(@user)
 \|
