--- a/app/views/entries/_form.html.haml
+++ b/app/views/entries/_form.html.haml
@@ -13,13 +13,13 @@
     = f.label :score
     = f.number_field :score
   .field
-    = label_tag :start_time
-    = text_field_tag :start_time
+    = f.label :start_time
+    = f.text_field :start_time
+  Duration:
   .field
-    = label_tag :number_of_hours
-    = text_field :number_of_hours
-  .field
-    = label_tag :number_of_minutes
-    = text_field :number_of_minutes
+    = f.label :hours
+    = f.text_field :hours
+    = f.label :minutes
+    = f.text_field :minutes
   .actions
     = f.submit 'Save'
