--- a/app/views/entries/show.html.haml
+++ b/app/views/entries/show.html.haml
@@ -6,7 +6,19 @@
 %p
   %b Score:
   = @entry.score
+%p
+  %b Start Time:
+  = @entry.start_time
+%p
+  %b End Time:
+  = @entry.end_time
+%p
+  %b Duration
+  = @entry.hours
+  hours, 
+  = @entry.minutes
+  minutes
 
-= link_to 'Edit', edit_entry_path(@entry)
+= link_to 'Edit', edit_user_activity_entry_path(@user, @activity, @entry)
 \|
-= link_to 'Back', entries_path
+= link_to 'Back', user_activity_path(@user, @activity)
