--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -7,15 +7,7 @@
   %b Default score:
   = @activity.priority
 
-- if !@activity.entries.empty?
-  Recent activity entries logged:
-  %li
-    - @activity.entries.each do |e|
-      = link_to e.start_time, user_activity_entry_path(@user, @activity, e)
-      - if e.note
-        = link_to e.note, user_activity_entry_path(@user, @activity, e)
-      , Score:
-      = e.score
+= render :partial => 'entries/list_entries', :locals=>{:entries=>@activity.entries}
 
 %p
 = link_to 'Edit', edit_user_activity_path(@user,@activity)
