--- a/app/views/entries/show.html.haml
+++ b/app/views/entries/show.html.haml
@@ -19,7 +19,11 @@
 %p
   %b Score:
   = @entry.score
-  
+
+= link_to 'Home', user_path(@user)
+\|  
 = link_to 'Edit', edit_user_activity_entry_path(@user, @activity, @entry)
 \|
-= link_to 'Back', user_activity_path(@user, @activity)
+= link_to 'Destroy', [@user, @activity, @entry], :confirm => 'Are you sure?', :method => :delete
+\|
+= link_to 'Activity Show', user_activity_path(@user, @activity)
