starting to write model logic

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -9,6 +9,10 @@
   = format_date(session[:day])
   (link to Change Date)
 
+%p
+  Score for today:
+  = @user.day_score
+
 - if !@day_entries.blank?
   = render :partial => 'entries/list_entries', :locals=>{:entries=>@day_entries}
     
