--- a/app/views/goals/_form.html.haml
+++ b/app/views/goals/_form.html.haml
@@ -1,9 +1,9 @@
-= form_for @project do |f|
-  -if @project.errors.any?
+= form_for @goal do |f|
+  -if @goal.errors.any?
     #error_explanation
-      %h2= "#{pluralize(@project.errors.count, "error")} prohibited this project from being saved:"
+      %h2= "#{pluralize(@goal.errors.count, "error")} prohibited this goal from being saved:"
       %ul
-        - @project.errors.full_messages.each do |msg|
+        - @goal.errors.full_messages.each do |msg|
           %li= msg
 
   .field
