--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -3,10 +3,7 @@
 %table
   %tr
     %th Name
-    %th Description
-    %th Start time
-    %th Days
-    %th Hours
+    %th Target completion date
     %th
     %th
     %th
@@ -14,10 +11,7 @@
   - @projects.each do |project|
     %tr
       %td= project.name
-      %td= project.description
-      %td= project.start_time
-      %td= project.days
-      %td= project.hours
+      %td= project.target_completion_date
       %td= link_to 'Show', project
       %td= link_to 'Edit', edit_project_path(project)
       %td= link_to 'Destroy', project, :confirm => 'Are you sure?', :method => :delete
