--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -45,3 +45,8 @@
 = link_to 'Show Activities', user_activities_path(@user)
 \|
 = link_to 'Add Activity', new_user_activity_path(@user)
+\|
+= link_to 'Goals', user_goals_path(@user)
+\|
+= link_to 'Projects', user_projects_path(@user)
+
