fleshing out goals a bit

--- a/app/views/goals/edit.html.haml
+++ b/app/views/goals/edit.html.haml
@@ -2,6 +2,6 @@
 
 = render 'form'
 
-= link_to 'Show', @goal
+= link_to 'Show', [@user, @goal]
 \|
-= link_to 'Back', goals_path
+= link_to 'Back', user_goals_path(@user)
