--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -46,7 +46,7 @@
 \|
 = link_to 'Add Activity', new_user_activity_path(@user)
 \|
-= link_to 'Goals', user_goals_path(@user)
+= link_to 'Individual Goals', user_goals_path(@user)
 \|
 = link_to 'Projects', user_projects_path(@user)
 
