--- a/app/views/goals/_form.html.haml
+++ b/app/views/goals/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @goal do |f|
+= form_for [@user, @goal] do |f|
   -if @goal.errors.any?
     #error_explanation
       %h2= "#{pluralize(@goal.errors.count, "error")} prohibited this goal from being saved:"
