fleshing out goals a bit moar

--- a/app/views/goals/_form.html.haml
+++ b/app/views/goals/_form.html.haml
@@ -10,7 +10,17 @@
     = f.label :name
     = f.text_field :name
   .field
-    = f.label :target_completion_date
-    = f.datetime_select :target_completion_date
+    = f.label :summary
+    = f.text_field :summary
+  .field
+    = f.label "Goal type: "
+    = f.radio_button(:goal_type, "one-time")
+    One-time
+    = f.radio_button(:goal_type, "recurring")
+    Recurring
+  - if params[:set_date] == true  
+    .field
+      = f.label :target_completion_date
+      = f.datetime_select :target_completion_date
   .actions
     = f.submit 'Save'
