--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -49,4 +49,6 @@
 = link_to 'Individual Goals', user_goals_path(@user)
 \|
 = link_to 'Projects', user_projects_path(@user)
+\|
+= link_to 'Destroy User', @user, :confirm => 'Are you sure?', :method => :delete
 
