--- a/app/views/entries/_form.html.haml
+++ b/app/views/entries/_form.html.haml
@@ -8,7 +8,7 @@
 
   .field
     = f.label :start_time
-    = f.text_field :start_time
+    = f.datetime_select :start_time
   Duration:
   .field
     = f.label :hours
