--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -27,6 +27,7 @@
         = a.activity.description
 
 - if !@day_entries.blank?
+  Recent activity entries logged:
   = render :partial => 'entries/list_entries', :locals=>{:entries=>@day_entries}
     
 - if !@activities.blank?
