--- a/app/views/projects/edit.html.haml
+++ b/app/views/projects/edit.html.haml
@@ -2,6 +2,6 @@
 
 = render 'form'
 
-= link_to 'Show', @project
+= link_to 'Show', [@user, @project]
 \|
-= link_to 'Back', projects_path
+= link_to 'Back', user_projects_path(@user)
