--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -7,6 +7,6 @@
   %b Target completion date:
   = @project.target_completion_date
 
-= link_to 'Edit', edit_project_path(@project)
+= link_to 'Edit', edit_user_project_path(@user, @project)
 \|
-= link_to 'Back', projects_path
+= link_to 'Back', user_projects_path(@user)
