--- a/app/views/goals/_form.html.haml
+++ b/app/views/goals/_form.html.haml
@@ -9,6 +9,7 @@
   .field
     = f.label :name
     = f.text_field :name
+    = f.hidden_field :project_id
   .field
     = f.label :summary
     = f.text_field :summary
