added untrack goal button

--- a/app/views/goals/show.html.haml
+++ b/app/views/goals/show.html.haml
@@ -28,8 +28,16 @@
     Track activity
     = collection_select :activity, :id, @untracked_activities, :id, :description
     
-    = f.submit 'Save'
-  
+    = f.submit 'Track'
+
+- if !@tracked_activities.blank?
+  = form_for :activity, :url => user_goal_path(@user, @goal), :method => :put do |f|
+    Un-track activity
+    = hidden_field_tag :untrack, 'true'
+    = collection_select :activity, :id, @tracked_activities, :id, :description
+    
+    = f.submit 'Un-track'
+
 = link_to 'Edit', edit_user_goal_path(@user, @goal)
 \|
 = link_to 'Back to Goals', user_goals_path(@user)
