--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -51,5 +51,7 @@
 \|
 = link_to 'Projects', user_projects_path(@user)
 \|
+= link_to 'Tags', user_tags_path(@user)
+\|
 = link_to 'Destroy User', @user, :confirm => 'Are you sure?', :method => :delete
 
