--- a/app/views/tags/_form.html.haml
+++ b/app/views/tags/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @tag do |f|
+= form_for [@user, @tag] do |f|
   -if @tag.errors.any?
     #error_explanation
       %h2= "#{pluralize(@tag.errors.count, "error")} prohibited this tag from being saved:"
