--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -4,8 +4,8 @@
   %b Activity:
   = @activity.description
 %p
-  %b Default score:
-  = @activity.priority
+  %b Activity score:
+  = @activity.activity_score
   
 - unless @components.blank?
   Activity Components
