--- a/app/views/activities/_form.html.haml
+++ b/app/views/activities/_form.html.haml
@@ -9,8 +9,6 @@
   .field
     = f.label :description
     = f.text_field :description
-  .field
-    = f.label "Default score:"
-    = f.number_field :priority
+  = hidden_field_tag :goal_id, params[:goal_id]
   .actions
     = f.submit 'Save'
