added calender to change date

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -7,7 +7,7 @@
 %p
   Summary for 
   = format_date @day
-  (link to Change Date)
+  = link_to 'Change Date', change_date_user_path(@user)
         
 %p
   Score for today:
