--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -3,16 +3,27 @@
 %p
   %b
     = "#{@user.name} (#{@user.email})"
+  = link_to 'Edit', edit_user_path(@user)
 
 %p
   Summary for 
   = format_date @day
   = link_to 'Change Date', change_date_user_path(@user)
-        
-%p
-  Score for today:
-  = @user.day_score
 
+%p
+  - unless @user.projects.blank? && @user.projects.in_progress.blank?
+    Project Summary:
+    %p
+    = render :partial => 'projects/list_projects', :locals => {:projects=>@user.projects.in_progress}
+
+%p
+  - unless @user.activities.blank? || @user.activities.with_goals.blank?
+    Activity Goal Summary
+    %ul
+      - @user.activities.with_goals.each do |a|
+        %li
+          = a.name
+    
 - if !@day_target.nil?
   %p
     Your target score for today is:
@@ -39,11 +50,9 @@
         %li
           = link_to "#{activity.description}", new_user_activity_entry_path(@user, activity)
 
-= link_to 'Edit', edit_user_path(@user)
-\|
 = link_to 'Back', users_path
 \|
-= link_to 'Show Activities', user_activities_path(@user)
+= link_to 'Activities', user_activities_path(@user)
 \|
 = link_to 'Add Activity', new_user_activity_path(@user)
 \|
