--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -15,6 +15,11 @@
   Recent Activity Entries
   = render :partial => 'entries/list_entries', :locals=>{:entries=>@activity.entries}
 
+Tags:
+- @applied_tags.each do |tag|
+  = link_to tag.description, [tag.user, tag]
+
+%p
 - unless @unapplied_tags.blank? 
   = form_for :tag, :url => user_activity_path(@user, @activity), :method => :put do |f|
     Add tag
@@ -39,6 +44,7 @@
 = link_to 'Activity List', user_activities_path(@user)
 \|
 = link_to 'Log Entry', new_user_activity_entry_path(@user, @activity)
-\|
+
 -if @activity.allows_components?
+  \|
   = link_to 'Add Activity Component', new_user_activity_component_path(@user, @activity)
