--- a/app/views/goals/index.html.haml
+++ b/app/views/goals/index.html.haml
@@ -1,25 +1,10 @@
-%h1 Listing goals
-
-%table
-  %tr
-    %th Name
-    %th Target completion date
-    %th Completed on
-    %th
-    %th
-    %th
-
+%b
+  goals
+  
+%ul
   - @goals.each do |goal|
-    %tr
-      %td= link_to goal.name, [@user, goal]
-      %td{:align=>'center'}
-        - if goal.goal_type == 'recurring'
-          = goal.goal_type
-        - else
-          = goal.target_completion_date
-      %td= format_datetime goal.goal_completed_at
-      %td= link_to 'Edit', edit_user_goal_path(@user, goal)
-      %td= link_to 'Destroy', [@user, goal], :confirm => 'Are you sure?', :method => :delete
+    %li
+      = link_to goal.name, [goal.user, goal]
 
 %br
 
