--- a/app/views/goals/_form.html.haml
+++ b/app/views/goals/_form.html.haml
@@ -1,19 +1,3 @@
-:javascript
-  $(function() {
-      if($("#goal_goal_type_recurring").is(":checked")){
-         $('.field.recurring_fields').show();   
-           }else{
-         $('.field.recurring_fields').hide();    
-           }
-      $("input[name='goal[goal_type]']").change(function(){
-          if($("#goal_goal_type_recurring").is(":checked")){
-             $('.field.recurring_fields').show();   
-               }else{
-             $('.field.recurring_fields').hide();    
-               }
-      });
-  });
-
 = form_for [@user, @goal] do |f|
   -if @goal.errors.any?
     #error_explanation
@@ -53,7 +37,7 @@
       = radio_button_tag :goal_frequency, "weekly"
       Weekly
       %br
-      = radio_button_tag :goal_frequency, "bi-weekly"
+      = radio_button_tag :goal_frequency, "bi-monthly"
       Bi-Monthly
       %br
       = radio_button_tag :goal_frequency, "monthly"
@@ -66,17 +50,30 @@
   .field
     = f.label "Set goal by score or amount of time spent on activities"
     %p
-    = radio_button_tag "goal_evaluated_by", "score"
+    = radio_button_tag :goal_amount, :score
     Score: 
-    = f.text_field :goal_score, {:maxlength=>3, :size=>3}
+    = f.text_field :goal_amount_score, {:maxlength=>3, :size=>3}
     %p
-    = radio_button_tag "goal_evaluated_by", "duration"
+    = radio_button_tag :goal_amount, :duration
     Duration: 
-    = f.text_field :goal_duration, {:maxlength=>3, :size=>3}
-    = radio_button_tag :duration_type, :goal_duration_days_ind
-    Days
-    = radio_button_tag :duration_type, :goal_duration_hours_ind
-    Hours
+    = f.text_field :goal_amount_duration, {:maxlength=>3, :size=>3}
+    = f.select :goal_amount_unit, ["", "minutes", "hours", "days"]
   .actions
     = f.submit 'Save'
+    
+:javascript
+  $(function() {
+      if($("#goal_goal_type_recurring").is(":checked")){
+         $('.field .recurring_fields').show();   
+           }else{
+         $('.field .recurring_fields').hide();    
+           }
+      $("input[name='goal[goal_type]']").change(function(){
+          if($("#goal_goal_type_recurring").is(":checked")){
+             $('.field .recurring_fields').show();   
+               }else{
+             $('.field .recurring_fields').hide();    
+               }
+      });
+  });
     
