--- a/app/views/goals/show.html.haml
+++ b/app/views/goals/show.html.haml
@@ -26,7 +26,7 @@
 - if !@goal.goal_amount_score.blank?
   %p
     Goal Score:
-    = @goal.goal_amount
+    = @goal.goal_amount_score
 - elsif !@goal.goal_amount_duration.blank?
   %p
     Goal Duration:
