added some tests

--- a/app/views/tags/_form.html.haml
+++ b/app/views/tags/_form.html.haml
@@ -7,7 +7,7 @@
           %li= msg
 
   .field
-    = f.label :description
+    = f.label "Name"
     = f.text_field :description
   .field
     = f.label "Score (optional, 1 = positive, -1 = not positive, 0 = neutral)"
