--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,12 +12,12 @@
  *= require_tree .
  */
 
-header nav ul {
+ul.hmenu {
   list-style: none;
   margin: 0 0 2em;
   padding: 0;
 }
-header nav ul li {
+ul.hmenu li {
   display: inline;
 }
 #flash_notice, #flash_alert {
