--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -1,11 +1,14 @@
-%li
-  - if user_signed_in?
+- if user_signed_in?
+  %li
+    = link_to("#{current_user.name}'s Home", user_path(current_user.id))
+  %li
     = link_to('Logout', destroy_user_session_path, :method=>'delete')
-  - else
-    = link_to('Login', new_user_session_path)
-
-%li
-  - if user_signed_in?
+  %li
     = link_to('Edit account', edit_user_registration_path)
-  - else
+- else
+  %li
+    = link_to('Home', root_path)
+  %li
+    = link_to('Login', new_user_session_path)
+  %li
     = link_to('Sign up', new_user_registration_path)
